# cookiecutter-gokart

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.py
{{cookiecutter.project_name}}/.github/workflows/: pythonpackage.yml
{{cookiecutter.project_name}}/conf/: param.ini
{{cookiecutter.project_name}}/test/unit_test/: test_sample.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/model/: sample.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/: template.py
