[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "1.0.0"
description = "{{cookiecutter.package_description}}"
authors = ["{{cookiecutter.author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
gokart = "*"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
